syntax = "proto3"; // 使用 proto3 语法版本

package com.winter.protocol; // 生成的 Java 代码包名（对应 Java package）

option java_outer_classname = "WinterProtocol"; // 生成的外部 Java 类名（外层容器类）

option java_multiple_files = true; // 生成多个 Java 文件（每个消息一个文件）

// 这是一个“通用信封”，所有的消息都用它发 // 统一消息包装（所有业务消息走同一个 message）
message GamePacket { // 通用消息包定义（Envelope）
    // 消息类型 // 用枚举表示具体消息类别
    enum Type { // 消息类型枚举定义
        UNKNOWN = 0; // 未知/默认类型（proto3 枚举默认值必须为 0）
        LOGIN = 1; // 登录消息
        MOVE = 2; // 移动消息
        FIRE = 3; // 生火消息
        HEARTBEAT = 4; // 心跳消息（用于保活/超时检测）
        FOOD = 5; // 采集食物消息
        COAL = 6; // 采集煤炭消息
        BUILDING_UPGRADE = 7; // 升级建筑消息
        BUILDING_COMPLETE = 8; // 建筑完成消息
    } // 枚举定义结束

    Type type = 1; // 字段1：消息类型（决定如何解释后续内容）
    int64 playerid = 2; // 字段2：玩家ID（64位整数）
    
    // 具体内容 (简单起见，我们把坐标放在一起) // 负载数据（示例：坐标/文本等）
    float x = 3; // 字段3：x 坐标（32位浮点）
    float y = 4; // 字段4：y 坐标（32位浮点）
    string content = 5; // 字段5：文本内容（聊天或其他字符串）

    string username = 6; // 字段6：用户名（登录用）
    string password = 7; // 字段7：密码（登录用）

    int32 building_type = 8; // 字段8：建筑类型（升级/完成用，32位整数）
} // GamePacket 定义结束